5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4373/executions/1670_2975.log
== TEST (2019-04-16 19:15:18) 
-- CODE:
sucos=float(input("Quantos sucos desejam?"))
sal=float(input("E quantos salgados?"))
din=float(input("Valor em dinheiro"))
x=(sucos*3)+(sal*3.5)
print=("Valor total do lanche",x)
if(x>din):
	falta=x-din
	print=("Nao, valor disponivel nao suficiente")
else:
	print=("Sim, valor suficiente")
-- OUTPUT:
Real
0.00999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:16:18) 
-- CODE:
sucos=float(input("Quantos sucos desejam?"))
sal=float(input("E quantos salgados?"))
din=float(input("Valor em dinheiro:"))
x=((sucos*3)+(sal*3.5))
print=("Valor total do lanche",x)
if(x>din):
	falta=x-din
	print=("Nao, valor disponivel nao suficiente")
else:
	print=("Sim, valor suficiente")
-- OUTPUT:
Real
0.00999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:16:59) 
-- CODE:
sucos=float(input("Quantos sucos desejam?"))
sal=float(input("E quantos salgados?"))
din=float(input("Valor em dinheiro:"))
x=((sucos*3)+(sal*3.5))
print=("Valor total do lanche",x)
if(x>din):
	falta=x-din
	print=("Nao, valor disponivel nao suficiente")
else:
	print=("Sim, valor suficiente")
-- OUTPUT:
Real
0.00999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:18:00) 
-- CODE:
sucos=float(input("Quantos sucos desejam?"))
sal=float(input("E quantos salgados?"))
din=float(input("Valor em dinheiro:"))
x=sucos*3
y=sal*3.5
v=x+y
print=("Valor total do lanche",v)
if(x>din):
	falta=x-din
	print=("Nao, valor disponivel nao suficiente")
else:
	print=("Sim, valor suficiente")
-- OUTPUT:
Real
0.00999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:18:45) 
-- CODE:
sucos=float(input("Quantos sucos desejam?"))
sal=float(input("E quantos salgados?"))
din=float(input("Valor em dinheiro:"))
x=sucos*3
y=sal*3.5
v=(x+y)
print=("Valor total do lanche",v)
if(x>din):
	falta=x-din
	print=("Nao, valor disponivel nao suficiente")
else:
	print=("Sim, valor suficiente")
-- OUTPUT:
Real
0.00999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:19:48) 
-- CODE:
sucos=float(input("Quantos sucos desejam?"))
sal=float(input("E quantos salgados?"))
din=float(input("Valor em dinheiro:"))
x=sucos*3
y=sal*3.5
v=(x+y)
print=(roud(x,y)
if(x>din):
	falta=x-din
	print=("Nao, valor disponivel nao suficiente")
else:
	print=("Sim, valor suficiente")
-- ERROR:
File "XXXX", line 8
    if(x>din):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:20:08) 
-- CODE:
sucos=float(input("Quantos sucos desejam?"))
sal=float(input("E quantos salgados?"))
din=float(input("Valor em dinheiro:"))
x=sucos*3
y=sal*3.5
v=(x+y)
print=(roud(x,y)
if(x>din):
	falta=x-din
	print=("Nao, valor disponivel nao suficiente")
else:
	print=("Sim, valor suficiente")
-- ERROR:
File "XXXX", line 8
    if(x>din):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:20:58) 
-- CODE:
sucos=float(input("Quantos sucos desejam?"))
sal=float(input("E quantos salgados?"))
din=float(input("Valor em dinheiro:"))
x=sucos*3+sal*3.5
print=(roud(x)
if(x>din):
	falta=x-din
	print=("Nao, valor disponivel nao suficiente")
else:
	print=("Sim, valor suficiente")
-- ERROR:
File "XXXX", line 6
    if(x>din):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:20:59) 
-- CODE:
sucos=float(input("Quantos sucos desejam?"))
sal=float(input("E quantos salgados?"))
din=float(input("Valor em dinheiro:"))
x=sucos*3+sal*3.5
print=(roud(x)
if(x>din):
	falta=x-din
	print=("Nao, valor disponivel nao suficiente")
else:
	print=("Sim, valor suficiente")
-- ERROR:
File "XXXX", line 6
    if(x>din):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:21:20) 
-- CODE:
sucos=float(input("Quantos sucos desejam?"))
sal=float(input("E quantos salgados?"))
din=float(input("Valor em dinheiro:"))
x=sucos*3+sal*3.5
print=(round(x))
if(x>din):
	falta=x-din
	print=("Nao, valor disponivel nao suficiente")
else:
	print=("Sim, valor suficiente")
-- ERROR:
File "XXXX", line 6
    if(x>din):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:22:58) 
-- CODE:
sucos=float(input("Quantos sucos desejam?"))
s=float(input("E quantos salgados?"))
din=float(input("Valor em dinheiro:"))
x=((sucos*3)+(s*3.5))
print=(round(x))
if(x>din):
	falta=x-din
	print=("Nao, valor disponivel nao suficiente")
else:
	print=("Sim, valor suficiente")
-- ERROR:
File "XXXX", line 6
    if(x>din):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:24:53) 
-- CODE:
sucos=int(input("Quantos sucos desejam?"))
s=int(input("E quantos salgados?"))
din=float(input("Valor em dinheiro:"))
x=((sucos*3)+(s*3.5))
print=(round("Valor total",x))
if(x>din):
	falta=x-din
	print=("Nao")
else:
	print=("Sim")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print=(round("Valor total",x))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:26:21) 
-- CODE:
sucos=int(input("Quantos sucos desejam?"))
s=int(input("E quantos salgados?"))
din=float(input("Valor em dinheiro:"))
x=((sucos*3)+(s*3.5))
print=(round(x,1))
if(x>din):
	falta=x-din
	print=("Nao")
else:
	print=("Sim")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print=(round("Valor total",x))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:26:57) 
-- CODE:
sucos=int(input("Quantos sucos desejam?"))
s=int(input("E quantos salgados?"))
din=float(input("Valor em dinheiro:"))
x=((sucos*3)+(s*3.5))
print(round(x,1))
if(x>din):
	falta=x-din
	print("Nao")
else:
	print("Sim")
-- OUTPUT:
13.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:27:07) 
-- CODE:
sucos=int(input("Quantos sucos desejam?"))
s=int(input("E quantos salgados?"))
din=float(input("Valor em dinheiro:"))
x=((sucos*3)+(s*3.5))
print(round(x,1))
if(x>din):
	falta=x-din
	print("Nao")
else:
	print("Sim")
-- OUTPUT:
13.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:27:26) 
-- CODE:
sucos=int(input("Quantos sucos desejam?"))
s=int(input("E quantos salgados?"))
din=float(input("Valor em dinheiro:"))
x=((sucos*3)+(s*3.5))
print(round(x,1))
if(x>din):
	falta=x-din
	print("Nao")
else:
	print("Sim")
-- EXECUTION TIME:
0.163475
-- TEST CASE 1:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
---- user output:
13.0
Sim
-- TEST CASE 2:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
---- user output:
10.0
Nao
-- TEST CASE 3:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
---- user output:
26.5
Nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
